@@ -50,7 +50,7 @@ Item {
     property string description
     property date creationDate
     property date dueDate
-    property string repeat: "never" // or "daily", "weekly", "monthly", "yearly"
+    property string repeat: "never" // or "daily", "weekly", "biweekly", "monthly", "yearly"
     property bool completed
     property date completionDate
     property string priority: "low"
@@ -130,6 +130,8 @@ Item {
                         json.dueDate.setDate(json.dueDate.getDate() + 1)
                     } else if (repeat === "weekly") {
                         json.dueDate.setDate(json.dueDate.getDate() + 7)
+                    } else if (repeat === "biweekly") {
+                        json.dueDate.setDate(json.dueDate.getDate() + 14)
                     } else if (repeat === "monthly") {
                         json.dueDate.setMonth(json.dueDate.getMonth() + 1)
                     } else if (repeat === "yearly") {
